--- a/Project2/HTML/yamaha.html
+++ b/Project2/HTML/yamaha.html
@@ -109,7 +109,10 @@
 		<script type="text/javascript">
 			pannellum.viewer('panorama', {
 			    "type": "equirectangular",
-			    "panorama": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg"
+			    "panorama": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
+			    "pitch": 2.3,
+			    "yaw": -135.4,
+			    "hfov": 120
 			});
 		</script>
 	</body>
