--- a/Project2/HTML/yamaha.html
+++ b/Project2/HTML/yamaha.html
@@ -30,7 +30,7 @@
 				<div id="banner"><img src="../IMG/banner.jpg" alt="banner" title="yamaha"></div>
 			</div>
 			<div id="content">
-				<div id="panorama"></div>
+				<div id="panorama1"></div>
 				<div id="xega">
 					<h1>XE GA YAMAHA</h1>
 					<div class="row">
@@ -107,12 +107,10 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-			pannellum.viewer('panorama', {
+			pannellum.viewer('panorama1', {
 			    "type": "equirectangular",
 			    "panorama": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
-			    "pitch": 2.3,
-			    "yaw": -135.4,
-			    "hfov": 120
+			    autoplay: true
 			});
 		</script>
 	</body>
