--- a/Project2/HTML/yamaha.html
+++ b/Project2/HTML/yamaha.html
@@ -110,7 +110,7 @@
 			pannellum.viewer('panorama1', {
 			    "type": "equirectangular",
 			    "panorama": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
-			    autoplay: true
+			    "autoplay": true
 			});
 		</script>
 	</body>
