--- a/Project2/HTML/yamaha.html
+++ b/Project2/HTML/yamaha.html
@@ -109,7 +109,7 @@
 		<script type="text/javascript">
 			pannellum.viewer('panorama1', {
 			    "type": "equirectangular",
-			    "panorama": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
+			    "panorama1": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
 			    "autoLoad": true
 			});
 		</script>
