--- a/Project2/HTML/yamaha.html
+++ b/Project2/HTML/yamaha.html
@@ -30,7 +30,7 @@
 				<div id="banner"><img src="../IMG/banner.jpg" alt="banner" title="yamaha"></div>
 			</div>
 			<div id="content">
-				<div id="panorama1"></div>
+				<div id="panorama"></div>
 				<div id="xega">
 					<h1>XE GA YAMAHA</h1>
 					<div class="row">
@@ -107,9 +107,9 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-			pannellum.viewer('panorama1', {
+			pannellum.viewer('panorama', {
 			    "type": "equirectangular",
-			    "panorama1": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
+			    "panorama": "https://congtrinh0209.github.io/Du_anTN/IMG/IMG-360/PANO_20170530_095353_0.jpg",
 			    "autoLoad": true
 			});
 		</script>
