--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -1203,7 +1203,7 @@
 			</div>
 		</div>
 	</div>
-
+	<div id="panorama1" class="panorama"></div>
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
 		<div class="footer-content">
