--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -296,7 +296,7 @@
 							<div class="clear"></div>
 						</div>
 						<div class="clear"></div>
-						
+
 						<!--Thông tin xem chi tiết-->
 						<div id="content-detail" class="collapse">
 							<div class="menu-detail"><!-- Navs Tabs-->
@@ -305,7 +305,7 @@
 								    <li class="active"><a data-toggle="tab" href="#menu1">THÔNG TIN CHUNG</a></li>
 								    <li><a data-toggle="tab" href="#menu2">MÔ TẢ CHI TIẾT</a></li>
 								    <li><a data-toggle="tab" href="#menu3">HÌNH ẢNH</a></li>
-								    <li><a data-toggle="tab" href="#menu5">Ảnh 360<sup>o</sup></a></li>
+								    <li><a data-toggle="tab" href="#menu5">ẢNH 360<sup>o</sup></a></li>
 								    <li class="position item1"><a data-toggle="tab" href="#menu4">VỊ TRÍ</a></li>
 								</ul>
 							<!-- Content navs tabs-->
@@ -488,7 +488,7 @@
 									    <li class="active"><a data-toggle="tab" href="#menu2_1">THÔNG TIN CHUNG</a></li>
 									    <li><a data-toggle="tab" href="#menu2_2">MÔ TẢ CHI TIẾT</a></li>
 									    <li><a data-toggle="tab" href="#menu2_3">HÌNH ẢNH</a></li>
-									    <li><a data-toggle="tab" href="#menu2_5">Ảnh 360<sup>o</sup></a></li>
+									    <li><a data-toggle="tab" href="#menu2_5">ẢNH 360<sup>o</sup></a></li>
 									    <li class="position item2"><a data-toggle="tab" href="#menu2_4">VỊ TRÍ</a></li>
 									</ul>
 								<!-- Content navs tabs-->
