--- a/Du_anTN/HTML/help.html
+++ b/Du_anTN/HTML/help.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel='shortcut icon' type='image/x-icon' href='../IMG/logo-option2png.ico'/>
 </head>
 <body>
 	<div class="back-top"><a href="#view"><img src="../IMG/back-top.png"></a></div>
