--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -391,7 +391,12 @@
 									    <div id="detail-item4" class="des-detail-content">
 											<div id="googleMap1" style="width:100%;height:400px;"></div>
 											<div id="right-panel">
-											  <h2>CĐ, ĐH gần nhất</h2>
+											  <select class="near_by_item">
+													<option>CĐ, ĐH gần nhất</option>
+													<option>Điểm buýt</option>
+													<option>Bệnh viện</option>
+													<option>Bãi gửi xe</option>
+												</select>
 											  <ul id="places"></ul>
 											</div>
 										</div>
@@ -576,7 +581,13 @@
 										    <div id="detail-item4" class="des-detail-content">
 												<div id="googleMap2" style="width:100%;height:400px;"></div>
 												<div id="right-panel2">
-												  <h2>CĐ, ĐH gần nhất</h2>
+												<select class="near_by_item">
+													<option>CĐ, ĐH gần nhất</option>
+													<option>Điểm buýt</option>
+													<option>Bệnh viện</option>
+													<option>Bãi gửi xe</option>
+												</select>
+
 												  <ul id="places2"></ul>
 												</div>
 											</div>
