--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -1257,7 +1257,7 @@
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&libraries=places"></script>	
-	<script type="text/javascript" src="../JAVASCRIPT/home.js"></script>
+	<script type="text/javascript" src="../JAVASCRIPT/home-compiler.js"></script>
 	<script type="text/javascript" src="../../pannellum/pannellum.js"></script>
 	<script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
