--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -383,7 +383,7 @@
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/manager.js"></script>
-	<script src="../JAVASCRIPT/home.js"></script>
+	<script src="../JAVASCRIPT/home-compiler.js"></script>
 	<script src="../JAVASCRIPT/sign-up.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
