--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -186,6 +186,7 @@
 						<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 						<strong>Bạn cần đăng nhập để sử dụng chức năng này!</strong>
 					</div>
+					<div style="color: #66A400; margin-bottom: 10px"><i class="fa fa-angle-double-right">Click vào địa điểm cho thuê để nhận chỉ đường và thông tin chi tiết!</i></div>
 					<!--Tìm quanh đây-->
 					<div class="map-search">
 						<span>Bán kính tìm kiếm (đv: mét)</span>
@@ -676,8 +677,8 @@
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&callback=myMap"></script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
-	<script src="../JAVASCRIPT/home.js"></script>
-	<script src="../JAVASCRIPT/search-nearby.js"></script>
+	<script src="../JAVASCRIPT/home-compiler.js"></script>
+	<script src="../JAVASCRIPT/search-nearby-compiler.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
