--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -1258,21 +1258,20 @@
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&libraries=places"></script>	
-	<script type="text/javascript" src="../JAVASCRIPT/home-compiler.js"></script>
+	<script type="text/javascript" src="../JAVASCRIPT/home.js"></script>
 	<script type="text/javascript" src="../../pannellum/pannellum.js"></script>
 	<script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
-	<!--Start of Tawk.to Script-->
 	<script type="text/javascript">
-	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-	(function(){
-	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-	s1.async=true;
-	s1.src='https://embed.tawk.to/593e9762b3d02e11ecc69776/default';
-	s1.charset='UTF-8';
-	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
-	})();
+		var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+		(function(){
+		var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+		s1.async=true;
+		s1.src='https://embed.tawk.to/593e9762b3d02e11ecc69776/default';
+		s1.charset='UTF-8';
+		s1.setAttribute('crossorigin','*');
+		s0.parentNode.insertBefore(s1,s0);
+		})();
 	</script>
-	<!--End of Tawk.to Script-->
+	
 </body>
 </html>
