--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -90,6 +90,8 @@
 					<div class="menu-dropdown">
 						<ul>
 							<li class="item-dropdown"><i class="fa fa-home"></i><a href="../HTML/home.html">Trang chủ</a></li>
+							<li class="item-dropdown"><i class="fa fa-newspaper-o"></i><a href="../HTML/news.html">Tin tức</a></li>
+							<li class="item-dropdown"><i class="fa fa-life-ring"></i><a href="../HTML/support.html">Hướng dẫn</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Phòng cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Nhà cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Căn hộ cho thuê</a></li>
@@ -392,8 +394,9 @@
 									    <div id="detail-item4" class="des-detail-content">
 											<div id="googleMap1" style="width:100%;height:400px;"></div>
 											<div id="right-panel">
-											  <select class="near_by_item">
-													<option>CĐ, ĐH gần nhất</option>
+												<select class="near_by_item">
+											  		<option>Địa điểm lân cận</option>
+													<option>Trường CĐ, ĐH</option>
 													<option>Điểm buýt</option>
 													<option>Bệnh viện</option>
 													<option>Bãi gửi xe</option>
@@ -1130,6 +1133,7 @@
 						    <li><a href="#">4</a></li>
 						    <li><a href="#">5</a></li>
 						    <li><a href="#">...</a></li>
+						    <li><a href="#">Last</a></li>
 			  			</ul>
 			  		</div>
 				</div>
