--- a/Du_anTN/HTML/signup-success.html
+++ b/Du_anTN/HTML/signup-success.html
@@ -54,6 +54,8 @@
 					<div class="menu-dropdown">
 						<ul>
 							<li class="item-dropdown"><i class="fa fa-home"></i><a href="../HTML/home.html">Trang chủ</a></li>
+							<li class="item-dropdown"><i class="fa fa-newspaper-o"></i><a href="../HTML/news.html">Tin tức</a></li>
+							<li class="item-dropdown"><i class="fa fa-life-ring"></i><a href="../HTML/support.html">Hướng dẫn</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Phòng cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Nhà cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Căn hộ cho thuê</a></li>
