--- a/Du_anTN/HTML/support.html
+++ b/Du_anTN/HTML/support.html
@@ -26,7 +26,7 @@
 		<div class="clear"></div>
 	</div>
 	<div class="wrapper-container" style="margin-top: 0 !important">
-		<div class="container">
+		<div class="container"  id="view">
 			<div class="header">
 				<div class="face">
 					<i class="fa fa-facebook-square">
@@ -55,6 +55,8 @@
 					<div class="menu-dropdown">
 						<ul>
 							<li class="item-dropdown"><i class="fa fa-home"></i><a href="../HTML/home.html">Trang chủ</a></li>
+							<li class="item-dropdown"><i class="fa fa-newspaper-o"></i><a href="../HTML/news.html">Tin tức</a></li>
+							<li class="item-dropdown"><i class="fa fa-life-ring"></i><a href="../HTML/support.html">Hướng dẫn</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Phòng cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Nhà cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Căn hộ cho thuê</a></li>
