--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -392,6 +392,7 @@
 									</div>
 								    <div id="menu4" class="tab-pane fade" style="position: relative;">
 									    <div id="detail-item4" class="des-detail-content">
+									    	<p style="color: green">Bật định vị để sử dụng được tính năng này</p>
 											<div id="googleMap1" style="width:100%;height:400px;"></div>
 											<div id="right-panel">
 												<select class="near_by_item">
@@ -406,6 +407,7 @@
 										</div>
 									</div>
 									<div id="menu5" class="tab-pane fade">
+										<p style="color: green">Tính năng này hiện mới hỗ trợ trên Chrome Browser</p>
 										<div id="panorama1" class="panorama"></div>
 									</div>
 								</div>	    
@@ -597,6 +599,7 @@
 											</div>
 									    </div>
 									    <div id="menu2_5" class="tab-pane fade">
+									    	<p style="color: green">Tính năng này hiện mới hỗ trợ trên Chrome Browser</p>
 											<div id="panorama2" class="panorama"></div>
 										</div>
 									</div>	    
