--- a/Du_anTN/HTML/new2.html
+++ b/Du_anTN/HTML/new2.html
@@ -372,7 +372,7 @@
 		</div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
-	<script src="../JAVASCRIPT/home.js"></script>
+	<script src="../JAVASCRIPT/home-compiler.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
