--- a/Du_anTN/HTML/post-edit.html
+++ b/Du_anTN/HTML/post-edit.html
@@ -546,7 +546,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3fFxtvFJIvNa42oy1_NJN9OiiquuNhQY&libraries=places&callback=initAutocomplete"
          async defer></script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
-	<script src="../JAVASCRIPT/home.js"></script>
+	<script src="../JAVASCRIPT/home-compiler.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
