--- a/Du_anTN/HTML/signup-success.html
+++ b/Du_anTN/HTML/signup-success.html
@@ -234,7 +234,7 @@
 		</div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
-	<script src="../JAVASCRIPT/home.js"></script>
+	<script src="../JAVASCRIPT/home-compiler.js"></script>
 	<script src="../JAVASCRIPT/sign-up.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
