--- a/Gulp/app/html/index.html
+++ b/Gulp/app/html/index.html
@@ -45,8 +45,9 @@
 												<a href="#"><p>GRANDER PREMIUM</p></a>
 										</li>
 										<li class="sp">
-												<a href="#"><img src="../IMG/janus.png"alt="janus" title="JANUS"></a>
-												<a href="#"><p>JANUS</p></a></li>
+												<a href="#"><img src="../IMG/janus.png" alt="janus" title="JANUS"></a>
+												<a href="#"><p>JANUS</p></a>
+										</li>
 								</ul>
 						</div>
 						<div class="row">
@@ -97,10 +98,12 @@
 				</div>
 		</div>
 		<div id="footer">
-				<p>ĐẠI LÝ ỦY QUYỀN PHÂN PHỐI XE YAMAHA CÔNG TRÌNH</br>
-						ĐỊA CHỈ: 99 TRẦN HƯNG ĐẠO - TP. NAM ĐỊNH</br>
-						LIÊN HỆ: Mr.Trình 0868.95.91.93/0868.97.91.93
-				</p>
+				<div class="wrap-footer">
+						<p>ĐẠI LÝ ỦY QUYỀN PHÂN PHỐI XE YAMAHA CÔNG TRÌNH </br>
+								ĐỊA CHỈ: 99 TRẦN HƯNG ĐẠO - TP. NAM ĐỊNH </br>
+								LIÊN HỆ: Mr.Trình 0868.95.91.93/0868.97.91.93
+						</p>
+				</div>
 		</div>
 </div>
 </body>
