--- a/Du_anTN/HTML/start-page.html
+++ b/Du_anTN/HTML/start-page.html
@@ -120,7 +120,7 @@
 		<div class="clear"></div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
-	<script src="../JAVASCRIPT/home.js"></script>
+	<script src="../JAVASCRIPT/home-compiler.js"></script>
 	<script src="../../materialize/js/materialize.min.js"></script>
 </body>
 
