--- a/first-project/news.html
+++ b/first-project/news.html
@@ -64,7 +64,7 @@
 								<div class="container-fluid">
 										<div class="navbar-header">
 												<ul class="nav-mobile">   <!--Nav for mobile-->
-														<li><a href="#menu-search"><i classs="fa fa-search"></i><p>Tìm phòng</p></a></li>
+														<li><a href="#menu-search"><i class="fa fa-search"></i><p>Tìm phòng</p></a></li>
 														<li class="search_nearby"><a><i class="fa fa-map-marker"></i><p>Tìm quanh đây</p></a></li>
 														<li><a href="post.html"><i class="fa fa-upload"></i><p>Đăng tin</p></a></li>
 														<div class="clear"></div>
