--- a/first-project/manage.html
+++ b/first-project/manage.html
@@ -297,7 +297,8 @@
 																				<div class="row">
 																						<div class="col-sm-6 col-xs-12">
 																								<label for="phone">Điện thoại</label>
-																								<input type="phone" class="form-control" name="phone" id="phone" placeholder="" value="0868979493">
+																								<input type="phone" class="form-control" name="phone" id="phone"
+																								       placeholder="" value="0868979493">
 																						</div>
 																				</div>
 																		</div>
