--- a/first-project/start-page.html
+++ b/first-project/start-page.html
@@ -15,18 +15,28 @@
 </head>
 <body>
 	<article class="wrap-content">
-		<section class="ad-audio"></section>
+		<section class="ad-audio">
+			<video src="./video/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
+		</section>
 		<section class="content content1">
-			<div class="logo">
-				<img src="./images/logo-option2png.png" alt="logo">
-			</div>
+			<!--<div class="logo">-->
+				<!--<img src="./images/logo-option2png.png" alt="logo">-->
+			<!--</div>-->
 			<div class="slogan">
-				<h1>Kết nối mọi nhu cầu về nhà ở</h1>
-				<h1>Tìm nhà, cho thuê nhà thật đơn giản</h1>
+				<!--<h1>Kết nối mọi nhu cầu về nhà ở</h1>-->
+				<!--<h1>Tìm nhà, cho thuê nhà thật đơn giản</h1>-->
+				<div class="navbar-header">
+					<ul class="nav-mobile">   <!--Nav for mobile-->
+						<li class="item"><a href="home.html"><i class="fa fa-home"></i><p>Trang chủ<p></p></a></li>
+						<li class="item"><a href="guide.html"><i class="fa fa-life-ring"></i><p>Hướng dẫn</p></a></li>
+						<li class="item"><a href="manage.html"><i class="fa fa-book"></i><p>Quản lý</p></a></li>
+						<div class="clear"></div>
+					</ul>
+				</div>
 				<button class="btn-enter"><a href="home.html">Truy cập ngay</a></button>
 			</div>
 			<div class="scroll-icon">
-				<img src="./images/img-startpage/mouse-icon.png" alt="mouse-icon">
+				<img src="./images/img-startpage/scroll-top.png" alt="mouse-icon">
 			</div>
 		</section>
 		<section class="content content2">
