--- a/first-project/start-page.html
+++ b/first-project/start-page.html
@@ -16,7 +16,8 @@
 <body>
 	<article class="wrap-content">
 		<section class="ad-audio">
-			<video src="https://www.dropbox.com/s/z2mo7zyaue42hav/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
+			<iframe id="ytplayer" type="text/html" width="100%" src="https://youtu.be/ClJsk8-6I1s?autoplay=1&loop=1&controls=0&origin=http://example.com"
+  frameborder="0"></iframe>
 		</section>
 		<section class="content content1">
 			<!--<div class="logo">-->
