--- a/first-project/start-page.html
+++ b/first-project/start-page.html
@@ -16,8 +16,7 @@
 <body>
 	<article class="wrap-content">
 		<section class="ad-audio">
-			<iframe id="ytplayer" type="text/html" width="100%" src="https://youtu.be/ClJsk8-6I1s?autoplay=1&loop=1&controls=0&origin=http://example.com"
-  frameborder="0"></iframe>
+			<video src="https://bitbucket.org/congtrinh0209/congtrinh0209/downloads/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
 		</section>
 		<section class="content content1">
 			<!--<div class="logo">-->
