--- a/first-project/start-page.html
+++ b/first-project/start-page.html
@@ -16,7 +16,7 @@
 <body>
 	<article class="wrap-content">
 		<section class="ad-audio">
-			<video src="https://bitbucket.org/congtrinh0209/congtrinh0209/downloads/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
+			<video src="./video/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
 		</section>
 		<section class="content content1">
 			<!--<div class="logo">-->
@@ -136,7 +136,7 @@
 				</div>
 				<div class="content-right">
 					<div class="wrap-right wr2">
-						<img src="./images/img-startpage/ip2.png" alt="mobile">
+						<img src="./images/img-startpage/ip2_1.png" alt="mobile">
 					</div>
 				</div>
 				<div class="clear"></div>
@@ -152,33 +152,33 @@
 						quanh bán kính tùy chọn được hiển thị chi tiết trên GoogleMap, chỉ đường chính xác đến địa điểm cho thuê
 						rút ngắn thời gian tìm kiếm.
 					</div>
-					<button>Khám phá</button>
+					<button><a href="home.html">Khám phá</a></button>
 				</div>
 				<div class="content-left">
 					<div class="wrap-right wr3">
-						<img src="./images/img-startpage/ip1.png" alt="mobile">
+						<img src="./images/img-startpage/ip1_1.png" alt="mobile">
 					</div>
 				</div>
 				<div class="clear"></div>
 			</div>
 		</section>
-		<section class="content content4">
-			<div class="type3">
-				<div class="content-right">
-					<h2>Ngồi nhà xem phòng như đến tận nơi với hỗ trợ ảnh 360 chân thực.</h2>
-					<div class="text-des">
+		<!--<section class="content content4">-->
+			<!--<div class="type3">-->
+				<!--<div class="content-right">-->
+					<!--<h2>Ngồi nhà xem phòng như đến tận nơi với hỗ trợ ảnh 360 chân thực.</h2>-->
+					<!--<div class="text-des">-->
 
-					</div>
-					<button>Khám phá</button>
-				</div>
-				<div class="content-left">
-					<div class="wrap-right wr3">
-						<img src="" alt="">
-					</div>
-				</div>
-				<div class="clear"></div>
-			</div>
-		</section>
+					<!--</div>-->
+					<!--<button>Khám phá</button>-->
+				<!--</div>-->
+				<!--<div class="content-left">-->
+					<!--<div class="wrap-right wr3">-->
+						<!--<img src="" alt="">-->
+					<!--</div>-->
+				<!--</div>-->
+				<!--<div class="clear"></div>-->
+			<!--</div>-->
+		<!--</section>-->
 		<section class="content content5">
 			<div class="type1">
 				<div class="content-left">
@@ -189,11 +189,11 @@
 						tôi, mỗi địa điểm sẽ được hiển thị trực quan, chân thực nhất giúp ngôi nhà cho thuê của bạn đến với khách
 						hàng thật sinh động, tiết kiệm thời gian đến tận nơi xem nhà của khách hàng.
 					</div>
-					<button>Khám phá</button>
+					<button><a href="home.html">Khám phá</a></button>
 				</div>
 				<div class="content-right">
 					<div class="wrap-right wr4">
-						<img src="./images/img-startpage/ip3.png" alt="mobile">
+						<img src="./images/img-startpage/ip3_1.png" alt="mobile">
 					</div>
 				</div>
 				<div class="clear"></div>
