--- a/first-project/start-page.html
+++ b/first-project/start-page.html
@@ -16,7 +16,7 @@
 <body>
 	<article class="wrap-content">
 		<section class="ad-audio">
-			<video src="./video/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
+			<video src="https://bitbucket.org/congtrinh0209/congtrinh0209/downloads/intro_cut.mp4" type="video/mp4" autoplay="autoplay" loop="loop" preload="auto"></video>
 		</section>
 		<section class="content content1">
 			<!--<div class="logo">-->
