--- a/valenta-service/public/index.html
+++ b/valenta-service/public/index.html
@@ -65,6 +65,14 @@
           // Update count
           return shard_ref.update("count", firebase.firestore.FieldValue.increment(1));
       }
+      function decrementCounter(db, ref, num_shards) {
+          // Select a shard of the counter at random
+          const shard_id = Math.floor(Math.random() * num_shards).toString();
+          const shard_ref = ref.collection('shards').doc(shard_id);
+
+          // Update count
+          return shard_ref.update("count", firebase.firestore.FieldValue.increment(-1));
+      }
       // [END increment_counter]
 
       // [START get_count]
