--- a/valenta-service/public/index.html
+++ b/valenta-service/public/index.html
@@ -26,13 +26,22 @@
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       var firebaseConfig = {
-        apiKey: "AIzaSyBpKE-T5C3cCcf_CENN6QkSYRuI_gMUFVE",
-        authDomain: "baohanh-valenta.firebaseapp.com",
-        projectId: "baohanh-valenta",
-        storageBucket: "baohanh-valenta.appspot.com",
-        messagingSenderId: "169409237073",
-        appId: "1:169409237073:web:c9c4630f9f947fe6bb2870",
-        measurementId: "G-G32NJYNQ3V"
+        // apiKey: "AIzaSyBpKE-T5C3cCcf_CENN6QkSYRuI_gMUFVE",
+        // authDomain: "baohanh-valenta.firebaseapp.com",
+        // projectId: "baohanh-valenta",
+        // storageBucket: "baohanh-valenta.appspot.com",
+        // messagingSenderId: "169409237073",
+        // appId: "1:169409237073:web:c9c4630f9f947fe6bb2870",
+        // measurementId: "G-G32NJYNQ3V"
+
+        apiKey: "AIzaSyDsNErw1yZVP1b-3IQgeWPFb9J_77yKDjs",
+        authDomain: "valenta-service.firebaseapp.com",
+        databaseURL: "https://valenta-service-default-rtdb.asia-southeast1.firebasedatabase.app",
+        projectId: "valenta-service",
+        storageBucket: "valenta-service.appspot.com",
+        messagingSenderId: "721439275923",
+        appId: "1:721439275923:web:2f471e8c214d4822630666",
+        measurementId: "G-5W3J1EFEXS"
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
